--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
 		"typescript": "5.8.3",
 		"vite": "^6.3.4",
 		"vite-tsconfig-paths": "^5.1.4",
-		"vitest": "^3.1.1"
+		"vitest": "^3.1.1",
+		"sst": "^3.17.4"
 	},
 	"disabledLinters": [
 		"eslint-plugin-tailwindcss"
